src/test/ui/use/use-mod/use-mod-5.stderr
error[E0429]: `self` imports are only allowed within a { } list
  --> $DIR/use-mod-5.rs:7:13
   |
LL | use foo::bar::self;
   |             ^^^^^^
   |
help: Remove `::self`..
   |
LL | use foo::bar;
   |            --
help: ..or add braces around `self`
   |
LL | use foo::bar::{self};
   |               ^    ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0429`.
